# byrep

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.txt  buffer.cpp  buffer.h  encoding.cpp  encoding.h  main.cpp  options.cpp  options.h  timer.cpp  timer.h
include/byrep/: buffer.h  encoding.h
lib/: buffer.cpp  encoding.cpp
src/: buffer.cpp  buffer.h  encoding.cpp  encoding.h  main.cpp  options.cpp  options.h
